fix: select-pane z-index

--- a/src/shared/ui/select-pane/SelectPane.module.scss
+++ b/src/shared/ui/select-pane/SelectPane.module.scss
@@ -6,6 +6,7 @@
   box-shadow: 1px 9px 18px 0px rgba(0, 0, 0, 0.14);
   border-radius: 4px;
   position: absolute;
+  z-index: 200;
   top: 100%;
   left: 0;
   width: 100%;
